Closed
Bug 609784
Opened 15 years ago
Closed 13 years ago
[Linux] mochitests-5: test_alerts.html and test_alerts_noobserve.html report "ASSERTION: bad size recorded: 'aInstanceSize == 0 || entry->GetClassSize() == aInstanceSize', file .../nsTraceRefcntImpl.cpp, line 476"
Categories
(Toolkit :: General, defect)
Tracking
()
RESOLVED
FIXED
mozilla22
People
(Reporter: sgautherie, Assigned: karlt)
References
()
Details
(Keywords: assertion)
Attachments
(2 files)
|
6.12 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
|
7.92 KB,
patch
|
Details | Diff | Splinter Review |
Noticed while checking logs for bug 609772.
http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1288903673.1288904505.16409.gz&fulltext=1
Rev3 Fedora 12 mozilla-central debug test mochitests-5/5 on 2010/11/04 13:47:53
http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1288903531.1288904243.15514.gz&fulltext=1
Rev3 Fedora 12x64 mozilla-central debug test mochitests-5/5 on 2010/11/04 13:45:31
{
###!!! ASSERTION: bad size recorded: 'aInstanceSize == 0 || entry->GetClassSize() == aInstanceSize', file /builds/slave/mozilla-central-linux64-debug/build/xpcom/base/nsTraceRefcntImpl.cpp, line 476
GetBloatEntry [xpcom/base/nsTraceRefcntImpl.cpp:479]
NS_LogAddRef_P [xpcom/base/nsTraceRefcntImpl.cpp:1001]
NS_LogAddRef [xpcom/stub/nsXPComStub.cpp:279]
nsAlertsService::AddRef [toolkit/system/gnome/nsAlertsService.cpp:42]
...
}
| Reporter | ||
Comment 1•15 years ago
|
||
"blocking2.0=?"
assertion in nsTraceRefcntImpl.cpp seems rather unexpected...
blocking2.0: --- → ?
Summary: [Linux] mochitests-5: test_alerts.html and test_alerts_noobserve.html report "ASSERTION: bad size recorded: 'aInstanceSize == 0 || entry->GetClassSize() == aInstanceSize', file .../nsTraceRefcntImp"l.cpp, line 476 → [Linux] mochitests-5: test_alerts.html and test_alerts_noobserve.html report "ASSERTION: bad size recorded: 'aInstanceSize == 0 || entry->GetClassSize() == aInstanceSize', file .../nsTraceRefcntImpl.cpp, line 476"
| Reporter | ||
Updated•15 years ago
|
Also get in suite/common/downloads/tests/test_action_keys_respect_focus.xul
###!!! ASSERTION: bad size recorded: 'aInstanceSize == 0 || entry->GetClassSize() == aInstanceSize', file /builds/slave/comm-cen-trunk-lnx-dbg/build/mozilla/xpcom/base/nsTraceRefcntImpl.cpp, line 476
GetBloatEntry [xpcom/base/nsTraceRefcntImpl.cpp:474]
NS_LogAddRef_P [xpcom/base/nsTraceRefcntImpl.cpp:1001]
NS_LogAddRef [xpcom/stub/nsXPComStub.cpp:279]
nsAlertsService::AddRef [toolkit/system/gnome/nsAlertsService.cpp:42]
nsAlertsServiceConstructor [toolkit/system/gnome/nsGnomeModule.cpp:56]
mozilla::GenericFactory::CreateInstance [GenericFactory.cpp:49]
nsComponentManagerImpl::CreateInstanceByContractID [xpcom/components/nsComponentManager.cpp:1309]
nsComponentManagerImpl::GetServiceByContractID [xpcom/components/nsComponentManager.cpp:1670]
CallGetService [nsComponentManagerUtils.cpp:95]
nsGetServiceByContractID::operator() [nsComponentManagerUtils.cpp:278]
nsCOMPtr<nsIAlertsService>::assign_from_gs_contractid [nsCOMPtr.h:1252]
nsCOMPtr<nsIAlertsService>::nsCOMPtr [nsCOMPtr.h:628]
nsAlertsService::ShowAlertNotification [toolkit/components/alerts/nsAlertsService.cpp:110]
nsDownload::SetState [toolkit/components/downloads/nsDownloadManager.cpp:2235]
nsDownload::OnStateChange [toolkit/components/downloads/nsDownloadManager.cpp:2507]
nsWebBrowserPersist::OnStopRequest [embedding/components/webbrowserpersist/src/nsWebBrowserPersist.cpp:810]
nsHttpChannel::OnStopRequest [netwerk/protocol/http/nsHttpChannel.cpp:4057]
nsInputStreamPump::OnStateStop [netwerk/base/src/nsInputStreamPump.cpp:579]
nsInputStreamPump::OnInputStreamReady [netwerk/base/src/nsInputStreamPump.cpp:403]
nsInputStreamReadyEvent::Run [xpcom/io/nsStreamUtils.cpp:113]
nsThread::ProcessNextEvent [xpcom/threads/nsThread.cpp:633]
NS_ProcessNextEvent_P [nsThreadUtils.cpp:250]
mozilla::ipc::MessagePump::Run [ipc/glue/MessagePump.cpp:107]
MessageLoop::RunInternal [ipc/chromium/src/base/message_loop.cc:220]
MessageLoop::RunHandler [ipc/chromium/src/base/message_loop.cc:203]
MessageLoop::Run [ipc/chromium/src/base/message_loop.cc:175]
nsBaseAppShell::Run [widget/src/xpwidgets/nsBaseAppShell.cpp:198]
nsAppStartup::Run [toolkit/components/startup/nsAppStartup.cpp:218]
XRE_main [toolkit/xre/nsAppRunner.cpp:3765]
main [suite/app/nsSuiteApp.cpp:103]
libc.so.6 + 0x15dec
| Assignee | ||
Comment 4•13 years ago
|
||
toolkit/components/alerts/nsAlertsService.cpp and toolkit/system/gnome/nsAlertsService.cpp both define nsAlertsService, differently.
We'll also need to avoid the name collision before folding libmozgnome into libxul.
| Assignee | ||
Updated•13 years ago
|
Component: Widget: Gtk → General
Product: Core → Toolkit
| Assignee | ||
Comment 5•13 years ago
|
||
Picking a name consistent with the service provided.
Attachment #713802 -
Flags: review?(roc)
Attachment #713802 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 6•13 years ago
|
||
Comment 7•13 years ago
|
||
Sorry, I backed out this fix and several others on inbound because it looks like one of them broke B2G tests:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e8c8d9373eba
Comment 8•13 years ago
|
||
Comment 9•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Comment 10•11 years ago
|
||
| Reporter | ||
Comment 11•11 years ago
|
||
(In reply to Martin Stránský from comment #10)
> Created attachment 8512001 [details] [diff] [review]
> patch on top of 858919
Martin, I don't think this patch belongs here (= resolved bug)...
You need to log in
before you can comment on or make changes to this bug.
Description
•