b=609784 rename DBus Notifications nsAlertsService to resolve collision with XP service r=roc